--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
+    "react-icons": "^4.7.1",
     "tailwindcss": "^3.2.4"
   }
 }
