--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@apollo/client": "^3.7.3",
     "@next/font": "13.1.1",
     "eslint": "8.30.0",
-    "eslint-config-next": "13.1.1",
+    "eslint-config-next": "^12.0.4",
     "graphql": "^16.6.0",
     "next": "13.1.1",
+    "next-auth": "^4.18.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
