--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.3",
     "@next/font": "13.1.1",
-    "eslint": "8.30.0",
+    "eslint": "^8.3.0",
     "eslint-config-next": "^12.0.4",
     "graphql": "^16.6.0",
     "next": "13.1.1",
