--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/font": "13.1.1",
     "eslint": "^7.23.0",
     "eslint-config-next": "^12.0.4",
+    "firebase": "^9.15.0",
     "graphql": "^16.6.0",
     "next": "13.1.1",
     "react": "18.2.0",
